0.16.0 - 2015-05-??
--------------------------------------------------------------------

  * Network handling is now more correct.

  * The `Config` struct has a new field, `EOM`, which sets the
    end-of-message marker (defaults to "\n\n").


0.15.0 - 2015-05-26
--------------------------------------------------------------------

  Breaking changes

      * The `Config` struct has two new fields:

          * Config.Buffer specifies the size of the buffer on the
            Asock.Msgr channel (defaults to 32).

          * Config.TLSConfig is the *tls.Config instance which is
            needed to set up a TLS connection.  This was formerly an
            argument of asock.NewTLS().

      * The `Timeout` field in the `Config` struct is now treated as
        milliseconds instead of seconds.

      * client constructors have a new argument, `timeout`, which sets
        the number of milliseconds before read/write operations
        timeout.

  Additions and other changes

      * client has a new method, Read()

      * A special-casing of Config.Timeout for test purposes has been
        removed from the production asock code.

      * Read buffer in asock and client now defaults to 128 bytes (up
        from 64).


0.14.1 - 2015-05-19
--------------------------------------------------------------------

    * Documentation improvements


0.14.0 - 2015-05-19
--------------------------------------------------------------------

    * TLS support added via the asock & client NewTLS() methods.


0.13.0 - 2015-05-16
--------------------------------------------------------------------

    * `asock/client` package added

    * Documentation improvements


0.12.0 - 2015-03-28
--------------------------------------------------------------------

    * Msg now implements the error interface, so it will autostringify
      when passed to fmt.Println, log.Print, log.Fatal, etc.


0.11.1 - 2015-02-18
--------------------------------------------------------------------
